[tool.poetry]
name = "akira"
version = "0.1.8"
description = "A short description of the package."
license = "MIT"
authors = [
    "Bruno-Felix <auxbfelix@gmail.com>"
]
readme = "README.md"
repository = "https://github.com/PDA-FGA/Playground"
keywords = ["packaging", "poetry"]
packages = [
    {include = "akira", from = "src"},
    {include = "yamls", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"
altair = "4.2.0"
attrs = "22.2.0"
bpemb = "0.3.4"
certifi = "2022.12.7"
charset-normalizer = "2.1.1"
contourpy = "1.0.6"
coverage = "7.0.2"
cycler = "0.11.0"
entrypoints = "0.4"
exceptiongroup = "1.1.0"
fonttools = "4.38.0"
gensim = "3.8.3"
idna = "3.4"
importlib-resources = "5.10.2"
iniconfig = "1.1.1"
jinja2 = "3.1.2"
joblib = "1.2.0"
jsonschema = "4.17.3"
kiwisolver = "1.4.4"
markupsafe = "2.1.1"
matplotlib = "3.6.2"
numpy = "1.24.1"
packaging = "22.0"
pandas = "1.5.2"
pillow = "9.4.0"
pkgutil-resolve-name = "1.3.10"
pluggy = "1.0.0"
pyparsing = "3.0.9"
pyrsistent = "0.19.3"
pytest = "7.2.0"
pytest-cov = "4.0.0"
python-dateutil = "2.8.2"
pytz = "2022.7"

[tool.poetry.scripts]
my_package_cli = 'akira.teste:return_ola_mundo_string'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
