[tool.poetry]
name = "akira"
version = "0.1.9"
description = "A short description of the package."
license = "MIT"
authors = [
    "Bruno-Felix <auxbfelix@gmail.com>"
]
readme = "README.md"
repository = "https://github.com/PDA-FGA/Playground"
keywords = ["packaging", "poetry"]
packages = [
    {include = "akira", from = "src"},
    {include = "yamls", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"
altair = "4.2.0"
attrs = "22.2.0"
bpemb = "0.3.4"
certifi = "2022.12.7"
charset-normalizer = "2.1.1"
contourpy = "1.0.6"
coverage = "7.0.2"
cycler = "0.11.0"
entrypoints = "0.4"
exceptiongroup = "1.1.0"
fonttools = "4.38.0"
gensim = "3.8.3"

[tool.poetry.scripts]
my_package_cli = 'akira.teste:return_ola_mundo_string'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
